fix: Adapt font size from game list also in dark mode

--- a/src/main/resources/com/aviumauctores/pioneers/views/dark-theme.css
+++ b/src/main/resources/com/aviumauctores/pioneers/views/dark-theme.css
@@ -50,6 +50,10 @@
     -fx-background-radius: 8 8 8 8;
 }
 
+.game-list {
+    -fx-font-size: 11px;
+}
+
 .list-view .corner {
     -fx-background-color: transparent ;
 }
